# SpartanJewels

./: README.md  SpartanJewels.cabal  haskell-test.cabal  stack.yaml
src/: Main.hs  SpartanJewels.hs
