name:                SpartanJewels
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SpartanEngineer/SpartanJewels
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            GUI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable SpartanJewels
  hs-source-dirs:      src
  main-is:             SpartanJewels.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gtk3, vector, random
